--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
   <h3>Contact</h3>
   <p>Email: parvesh123@gmail.com</p>
+
+  <button onclick="showmessage()">Click me</button>
   <script src="script.js"></script>
 
 </body>
