--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <p>Email: parvesh123@gmail.com</p>
 
   <button onclick="showmessage()">Click me</button>
+  <p id="output"></p>
   <script src="script.js"></script>
 
 </body>
