adding fake terminal

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 
   <button onclick="showmessage()">Click me</button>
   <p id="output"></p>
+
+  <h2>Terminal</h2>
+  <input type="text" id="terminalinput" placeHolder="Type a command....." />
+  <button onclick="runcommand()">Run</button>
+  <pre id="terminaloutput"></pre>
   <script src="script.js"></script>
 
 </body>
