--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Parvesh Kumar | Developer</title>
   <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
   <h1>Hi, I'm Parvesh Kumar</h1>
@@ -24,14 +23,14 @@
   <h3>Contact</h3>
   <p>Email: parvesh123@gmail.com</p>
 
-  <button onclick="showmessage()">Click me</button>
+  <button onclick="showMessage()">Click me</button>
   <p id="output"></p>
 
   <h2>Terminal</h2>
-  <input type="text" id="terminalinput" placeHolder="Type a command....." />
-  <button onclick="runcommand()">Run</button>
-  <pre id="terminaloutput"></pre>
-  <script src="script.js"></script>
+  <input type="text" id="terminalInput" placeholder="Type a command..." />
+  <button onclick="runCommand()">Run</button>
+  <pre id="terminalOutput"></pre>
 
+  <script src="script.js"></script>
 </body>
 </html>
